# kit_auto_evalution_jupyter

./: .gitignore  README.md  correct.ipynb  grading_results.csv  main.py  pyproject.toml  results.csv
auto_evalution_package/: load_and_excute_notebook.py  process_jupyter_v1.py  process_jupyter_v2.py
scripts/: folder_expansion.py
